@@ -1,3 +1,10 @@
+2008-04-05  Richard Guenther  <rguenther@suse.de>
+
+	PR tree-optimization/35833
+	* tree-vrp.c (operand_less_p): Deal with non-INTEGER_CST
+	results from fold_binary_to_constant.
+	(compare_values_warnv): Likewise.
+
 2008-04-04  Jakub Jelinek  <jakub@redhat.com>
 
 	PR target/35364
